adding JavaFX